src/encoded/static/scss/encoded/modules/_item-pages.scss
/* ... */
.acmg-guidelines-invoker {
	width: calc(100% - 145px);
    overflow-x: auto;
	height: 50px;
}


/**********************************************************
		     		Detail Tab
**********************************************************/

.item-page-detail {

	margin-bottom: 12px;

	.expandable-list {
		overflow: hidden;
	}

	.list-item.row {

		.item-label, .item-value {
			> div {
				min-height: 26px;
				height: 100%;
				word-break: break-all;

				padding-top: 8px;

			}
		}
		.item-label {
			font-weight: 500;
			flex-grow: 1;
			@include media-breakpoint-up(md){
				> div {
					border-bottom: 1px solid #eee;
					padding-bottom: 8px;
				}
			}
		}
		.item-value {
			flex-grow: 2;
			> div {
				border-bottom: 1px solid #eee;
				padding-bottom: 8px;
			}
		}
		ol {
			padding-left: 20px;
			margin-bottom: 0;
			//margin-top: 3px;
		}

		/** For embedded sub-objects **/
		.subitem-toggle {
			display: inline-block;
			> .link {
				@include user-select(none);
				color: #00cca3; // temporary?
				cursor:pointer;
				&:hover {
					color: #00cca3;
					text-shadow : 0 0 0;
				}
			}
			> i.icon {
				width: 20px;
			}
		}

		li > span > .subitem-toggle > i.icon {
			width: 20px;
			margin-left: -20px;
			background-color: #fff;
		}

		.data-display, .sub-panel {
			padding: 0;
			padding-top: 15px;
			> .sub-descriptions > .list-item:last-child > div.item-label > .inner,
			> .sub-descriptions > .list-item:last-child > div.item-value > .inner {
				border-bottom: none;
			}
		}

		&.array-group-row {
			&:not(.last-item):not(.open) {
				> .item-label, .item-value {
					> .inner {
						border-bottom-color: transparent;
						padding-bottom: 2px;
						min-height: 20px;
					}
				}
			}
			&:not(.first-item) {
				> .item-label, .item-value {
					> .inner {
						padding-top: 2px;
					}
				}
			}
			> .item-label {
				.label-number {
					transition: transform .3s ease-out, color .3s ease-out;
					transform: scale3d(0.85, 0.85, 0.85) translate3d(16px,1px,0);
					transform-origin: 100% 25%;
					margin-top: -1px;
					color: #888;
					.number-icon {
						opacity: 0;
						transition: opacity .3s ease-out;
					}
					&.active {
						color: #000;
						transform: scale3d(1,1,1);
						.number-icon {
							opacity: 1;
						}
					}
				}
				span.dim-duplicate {
					color: transparent;
					transition: color .3s ease-out;
					white-space: nowrap;
					overflow-x: hidden;
					text-overflow: ellipsis;
					i.icon {
						display: none;
					}
				}
			}
			//> .item-value {
			//	> .inner {
			//		border-bottom-color: transparent;
			//	}
			//}
		}

		&.open {
			> .item-label {
				> .inner {
					border-bottom-color: transparent;
					span.dim-duplicate {
						color: #bbb;
					}
				}
			}
			> .item-value {
				> .inner {
					border-bottom-color: transparent;
				}
			}
		}
		.detail-embedded-table-container {
			overflow-x: auto;
			table.detail-embedded-table {
				min-width: 100%;
				tr th {
					white-space: normal;
					word-break: normal;
					padding: 7px 4px;

					&.has-children {
						> .tooltip-info-container {
							padding-left: 36px;
							border-bottom: 1px solid #ddd;
							padding-bottom: 7px;
						}
					}

					.sub-list-keys-header {
						margin-left: -4px;
						margin-right: -4px;
						> div.inline-block {
							padding: 5px 8px 0px;
						}
						div.child-list-row-number {
							width: 36px;
						}

					}
				}
				tr td {
					word-break: normal;
					padding: 7px 8px;
					&.child-list-row-container {
						padding: 0;
						border-left: 1px dotted #ccc;
						border-right: 1px dotted #ccc;
						border-bottom: 1px solid #ddd;
					}
					&.no-word-break {
						white-space: nowrap;
					}
				}
				tr:not(:last-child) {
					border-bottom: 1px solid #eee;
				}
				.child-list-row {
					> div {
						padding: 5px 8px;
						text-align: center;
					}
					&:not(:last-child) {
						border-bottom: 1px dotted #eee;
					}
					div.child-list-row-number {
						width: 36px;
					}
				}
			}
		}

	}

	@include media-breakpoint-down(sm){
		/* Deprecated ? */
		.array-group .array-group-row.list-item:not(.first-item) {
			.item-label {
				display: none;
			}
		}
	}

	.sub-panel {
		padding-left: 40px;
		padding-bottom: 0;
		margin-bottom: 8px;
		border-bottom: 1px dotted #bbb;
		border-left: 1px dotted #aaa;
		.item-label {
			.tooltip-info-container {
				white-space: nowrap;
				overflow-x: hidden;
				text-overflow: ellipsis;
			}
		}
	}

}

/** JSON Tree Wrapper (e.g. fallback view) **/

.json-tree-wrapper {
	border-radius: $border-radius-lg;
	overflow: hidden;
	> ul {
		padding: 8px 16px 16px !important;
		margin: 0 !important;
	}
}


/**********************************************************
	Processing Summary Table (CaseView > Bioinfo Tab)
	Move into own file?
**********************************************************/

.primary-header {
	background-color: $primary-dark !important;
	color: #ffffff;
	h1, h2, h3, h4, h5, h6 {
		color: inherit;
	}
}
/* ... */

